--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ packages/*/coverage/
 packages/cli/src/generated/
 .integration-tests/
 packages/vscode-ide-companion/*.vsix
+COMMIT_MESSAGE.md
+PULL_REQUEST_DESCRIPTION.md
